<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/text_Title"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/text_Setting_0"/>

        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:text="@string/text_Setting_1" />


        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:text="@string/text_Setting_2"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:text="@string/text_Setting_3"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/text_Function_Title"/>

        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:text="@string/text_Function_1"/>


        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:text="@string/text_Function_2"/>

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:text="@string/text_Function_3"/>

        <TextView
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/text_Log_Title"/>
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:text="@string/text_Log_1"/>

</LinearLayout>
